--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -17,6 +17,8 @@
   cursor: pointer;
 }
 .header {
+  position: sticky;
+  top: 0;
   height: 7vh;
   display: flex;
   justify-content: space-between;
