react-router-dom 테스트
헤더와 내비게이션메뉴는 route 되나 본문이 아직 의도한 것처럼 렌더가 되지 않음.

--- a/client/src/components/Left_nav.css
+++ b/client/src/components/Left_nav.css
@@ -46,6 +46,7 @@
   align-items: center;
   height: var(--space-xxxlarge);
   padding: 0 var(--space-xlarge);
+  /* text-decoration: none; */
 }
 .each_menu_container:hover {
   cursor: pointer;
