container section update
사이드바 고정,
본문 여백 추가

--- a/client/src/components/Left_nav.css
+++ b/client/src/components/Left_nav.css
@@ -20,7 +20,9 @@
 }
 
 .navv {
-  position: sticky;
+  position: fixed;
+  top: 70px;
+  left: 0;
   /* padding: var(--font-size-large); */
   /* border: 2px solid blue; */
   width: 230px;
