--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -23,7 +23,9 @@
 .header {
   position: sticky;
   top: 0;
-  height: 7vh;
+  background-color: white;
+  opacity: 0.97;
+  height: 70px;
   display: flex;
   justify-content: space-between;
   align-items: center;
