--- a/client/src/page/Home.css
+++ b/client/src/page/Home.css
@@ -18,7 +18,7 @@
 }
 
 .Home .article {
-  background-color: cornflowerblue;
+  background-color: rgb(246, 250, 248);
   height: 100vh;
   margin-left: 230px;
   width: 87%;
